* Storing positions of docking windows and toolbars in settings now
* Added submenu to show/hide docking windows and toolbars to the View menu

2011-01-22  Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Wrong pretrigger position when using a DSO-2090
* Improved timing of the Hantek DSO sampling routine
* Bugfix: Wrong misc field in measurement table after enabling a channel

2011-01-23  Oliver Haag  <oliver.haag@gmail.com>
* Properly applying saved dock window and toolbar positions on startup now

2011-01-25  Oliver Haag  <oliver.haag@gmail.com>
* German translation updated

2011-02-09  Oliver Haag  <oliver.haag@gmail.com>
* Version 0.2.0:
* Updated version information
* Updated Doxygen mainpage and roadmap

2011-11-16 Oliver Haag  <oliver.haag@gmail.com>
* Redesign of Hantek::Control to make it easier to add support for new models
* Removed buggy destructor from GlGenerator, proper cleanup still missing

2011-11-27 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Copy-paste in Hantek::Control::setOffset, thanks to tinosnitso

2011-12-02 Oliver Haag  <oliver.haag@gmail.com>
* Moved values needed to control gain into lists, initialized in connectDevice

2012-07-08 Oliver Haag  <oliver.haag@gmail.com>
* Exact pixelation in GlScope and LevelSlider

2012-09-01 Oliver Haag  <oliver.haag@gmail.com>
* Updated documentation with first DSO-2250 details
* General documentation improvements

2012-09-20 Oliver Haag  <oliver.haag@gmail.com>
* First attempt to add DSO-2250 support
* More documentation updates

2012-09-21 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Uninitialized bulk command pointer for BULK_FSETBUFFER
* Bugfix: Slot setTriggerPosition wasn't renamed

2012-10-01 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Wrong bit mask for extra bits in Hantek::Control::getData

2012-10-02 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Hantek::Control redesign missing for used channels
* Bugfix: Always check DataAnalyzer::data for null pointer